2020-08-20  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Fix some more mailbox-opening issues

	* libbalsa/mailbox.c (libbalsa_mailbox_get_has_sort_pending):
	  new function;
	* libbalsa/mailbox.h: declare it;
	* src/balsa-index.c (bndx_scroll_on_open_idle): use it;
	* src/main-window.c (bw_real_open_mbnode_idle_cb): show the
	  BalsaIndex widget here, instead of in the scroll-on-open idle
	  handler
	(balsa_window_next_unread): balsa_index_select_next_unread()
	  finds the next unread message even if it is hidden.

2020-08-17  Peter Bloomfield  <pbloomfield@bellsouth.net>

	balsa-message: Restore text copy

	Edit:Copy has been broken for a while, because
	BalsaMimeWidgetText is now a container, not the actual text
	widget.

	* src/balsa-message.c (balsa_message_can_select): Check the
	mime-widget's text-widget, not the mime-widget itself.

2020-07-12  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Various: Drop libbalsa_{radio,toggle}_activated

	https://developer.gnome.org/gio/stable/GActionMap.html#GActionEntry:
	Since GLib 2.40, [activate] can be NULL for stateful actions,
	in which case the default handler is used. For boolean-stated
	actions with no parameter, this is a toggle. For other state
	types (and parameter type equal to the state type) this will be a
	function that just calls change_state…

	* libbalsa/application-helpers.c (libbalsa_window_add_accelerator):
	* libbalsa/application-helpers.h:
	* libbalsa/source-viewer.c (libbalsa_show_message_source):
	* src/ab-main.c (get_main_menu):
	* src/main-window.c:
	* src/message-window.c:
	* src/sendmsg-window.c:

2020-07-05  Peter Bloomfield  <pbloomfield@bellsouth.net>

	body: If a part with content-type "message/external-body" has
	access-type URL, use its URL parameter as the filename, instead
	of g_mime_part_get_filename(), so that the previous commit can
	work.

	* libbalsa/body.c (libbalsa_message_body_set_filename): get the
	  "access-type" parameter; if it is non-NULL and equals