@@ -1,3 +1,10 @@
+2020-08-21  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
+	balsa-index: Ensure visible in a low-priority idle callback
+
+	* src/balsa-index.c (bndx_ensure_visible_idle): the callback;
+	(balsa_index_ensure_visible): schedule it.
+
 2020-08-20  Peter Bloomfield  <pbloomfield@bellsouth.net>
 
 	Fix some more mailbox-opening issues
